--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.2.1
 annotated-types==0.6.0
 anyio==4.0.0
 asgiref==3.7.2
+backoff==2.2.1
 beautifulsoup4==4.12.2
 Brotli==1.1.0
 certifi==2023.7.22
@@ -13,6 +14,7 @@ distro==1.8.0
 Django==5.0
 duckduckgo-search==3.9.4
 filelock==3.13.1
+fuzzywuzzy==0.18.0
 google==3.0.0
 google-search==1.1.1
 googlesearch-python==1.2.3
@@ -24,6 +26,7 @@ httpx==0.25.1
 hyperframe==6.0.1
 idna==3.4
 install==1.3.5
+Levenshtein==0.25.0
 lxml==4.9.3
 numpy==1.26.2
 openai==1.3.9
@@ -31,6 +34,9 @@ Pillow==10.1.0
 platformdirs==4.1.0
 pydantic==2.5.2
 pydantic_core==2.14.5
+python-Levenshtein==0.25.0
+rapidfuzz==3.6.2
+ratelimit==2.2.1
 regex==2023.10.3
 requests==2.31.0
 scipy==1.11.4
